--- a/.github/workflows/deploy-multi-pages.yml
+++ b/.github/workflows/deploy-multi-pages.yml
@@ -48,7 +48,7 @@ jobs:
             changes+=('{ "name": "01-intro-react", "path": "01-intro-react", "type": "static" }')
           fi
           if [ "${{ steps.filter.outputs.app_02_intro_javascript }}" = "true" ]; then
-            changes+=('{ "name": "02-intro-javascript", "path": "05-gif-expert-app", "type": "vite" }')
+            changes+=('{ "name": "02-intro-javascript", "path": "02-intro-javascript", "type": "vite" }')
           fi
           if [ "${{ steps.filter.outputs.app_counter_cra }}" = "true" ]; then
             changes+=('{ "name": "03-counter-app-cra", "path": "03-counter-app-cra", "type": "cra" }')
