--- a/.github/workflows/deploy-multi-pages.yml
+++ b/.github/workflows/deploy-multi-pages.yml
@@ -32,8 +32,12 @@ jobs:
           filters: |
             app_01_intro:
               - '01-intro-react/**'
-              app_02_intro_javascript:
-              - '02-intro-javascript/**'
+
+              # Opción pendiente para el futuro
+              # app_02_intro_javascript:
+              # - '02-intro-javascript/**'
+
+
               app_counter_cra:
               - '03-counter-app-cra/**'
             app_05_gif_expert:
@@ -47,9 +51,11 @@ jobs:
           if [ "${{ steps.filter.outputs.app_01_intro }}" = "true" ]; then
             changes+=('{ "name": "01-intro-react", "path": "01-intro-react", "type": "static" }')
           fi
-          if [ "${{ steps.filter.outputs.app_02_intro_javascript }}" = "true" ]; then
-            changes+=('{ "name": "02-intro-javascript", "path": "02-intro-javascript", "type": "vite" }')
-          fi
+
+          # Opción pendiente para el futuro
+          # if [ "${{ steps.filter.outputs.app_02_intro_javascript }}" = "true" ]; then
+          #   changes+=('{ "name": "02-intro-javascript", "path": "02-intro-javascript", "type": "vite" }')
+          # fi
           if [ "${{ steps.filter.outputs.app_counter_cra }}" = "true" ]; then
             changes+=('{ "name": "03-counter-app-cra", "path": "03-counter-app-cra", "type": "cra" }')
           fi
