--- a/.github/workflows/deploy-multi-pages.yml
+++ b/.github/workflows/deploy-multi-pages.yml
@@ -33,7 +33,11 @@ jobs:
             app_01_intro:
               - '01-intro-react/**'
 
-              app_counter_cra:
+            # Opción pendiente para el futuro
+            # app_02_intro_javascript:
+            # - '02-intro-javascript/**'
+
+            app_03_counter_cra:
               - '03-counter-app-cra/**'
 
             app_05_gif_expert:
@@ -44,15 +48,21 @@ jobs:
         id: build-matrix
         run: |
           changes=()
+
           if [ "${{ steps.filter.outputs.app_01_intro }}" = "true" ]; then
             changes+=('{ "name": "01-intro-react", "path": "01-intro-react", "type": "static" }')
           fi
 
-          if [ "${{ steps.filter.outputs.app_counter_cra }}" = "true" ]; then
+          # Opción pendiente para el futuro
+          # if [ "${{ steps.filter.outputs.app_02_intro_javascript }}" = "true" ]; then
+          #   changes+=('{ "name": "02-intro-javascript", "path": "02-intro-javascript", "type": "vite" }')
+          # fi
+
+          if [ "${{ steps.filter.outputs.app_03_counter_cra }}" = "true" ]; then
             changes+=('{ "name": "03-counter-app-cra", "path": "03-counter-app-cra", "type": "cra" }')
           fi
 
-          if [ "${{ steps.filter.outputs.app_gif_expert }}" = "true" ]; then
+          if [ "${{ steps.filter.outputs.app_05_gif_expert }}" = "true" ]; then
             changes+=('{ "name": "05-gif-expert-app", "path": "05-gif-expert-app", "type": "vite" }')
           fi
 
